--- a/currency.html
+++ b/currency.html
@@ -10,7 +10,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Interest Calculator</a>
+              <a class="nav-link" href="index.html">Interest Calculator</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="currency.html">Currency Converter</a>
