--- a/currency.html
+++ b/currency.html
@@ -13,7 +13,7 @@
               <a class="nav-link" href="index.html">Interest Calculator</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="currency.html">Currency Converter</a>
+              <a class="nav-link" href="currency.html"><b>Currency Converter</b></a>
             </li>
         </ul>
     </nav>
