--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>ProfitLens - your ultimate guide to the Financial World!</title>
+    <title>ProfitLens - your guide to earning more!</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -19,7 +19,9 @@
     </nav>
     <center>
         <br>
-        <div class="container"><div class="typed-out"><h2><p class="green">ProfitLens</p> - your ultimate guide to the Financial World!</h2></div></div>
+        <div class="container"><div class="typed-out"><h2><p class="green">ProfitPulse</p> - your guide to earning more!</h2></div></div>
+        <br><br>
+        <h3>Calculate how much interest you can earn by investing wisely!</h3>
         <form onsubmit="return false;" style="margin-top: 30px;">
             <label for="principal">Principal (money put in!): &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
             <input type="number" id="principal"></input>
