--- a/currency.html
+++ b/currency.html
@@ -30,6 +30,7 @@
         frameBorder="0"
         allowtransparency="true">
     </iframe>
+        <h7>Choose your currency and enter the amount, and voila!</h7>
     </center>
 </body>
 </html>
