--- a/currency.html
+++ b/currency.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Currency Converter</title>
+    <title>Currency</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -22,15 +22,16 @@
         <h1>Currency Converter!</h1>
         <h3>See how much your local currency is worth the world over</h3>
         <br>
+        <h5>Choose your currency and enter the amount, and voila!</h5>
+        <br>
     <iframe
         title="fx"
         src="https://wise.com/gb/currency-converter/fx-widget/converter?sourceCurrency=USD&targetCurrency=INR"
-        height=450
+        height=425
         width=340
         frameBorder="0"
         allowtransparency="true">
     </iframe>
-        <h7>Choose your currency and enter the amount, and voila!</h7>
     </center>
 </body>
 </html>
