--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
     <center>
         <br>
-        <div class="container"><div class="typed-out"><h2><p class="green">ProfitPulse</p> - your guide to earning more!</h2></div></div>
+        <div class="container"><div class="typed-out"><h2><p class="green">Profit</p><p class="bluetitle">Pulse</p> - your guide to earning more!</h2></div></div>
         <br><br>
         <h3>Calculate how much interest you can earn by investing wisely!</h3>
         <form onsubmit="return false;" style="margin-top: 30px;">
